--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "prettier": "2.8.7",
+    "sass": "^1.60.0"
   }
 }
