--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier:check": "prettier --config ./.prettierrc --check \"{components, pages, styles}/**/*{.js, .ts,.html,.scss, .css}\"",
+    "prettier:fix": "prettier --config ./.prettierrc --write \"{components, pages, styles}/**/*{.js, .ts,.html,.scss, .css}\""
   },
   "dependencies": {
     "@types/node": "18.15.11",
