--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "prettier": "2.8.7",
     "sass": "^1.60.0"
   }
