--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BASE_URL=https://world-travel-quiz.vercel.app
+# NEXT_PUBLIC_BASE_URL=https://world-travel-quiz.vercel.app
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
