--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "swr": "^2.1.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
