Connected to Firebase realtime DB, add apollo/client and apollo/graphql, for now fetching is done client side

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/components/*": ["components/*"],
+      "@/pages/*": ["pages/*"],
+      "@/apollo/*": ["apollo/*"],
+      "@/styles/*": ["styles/*"],
+      "@/graphql/*": ["graphql/*"],
+      "@/interfaces/*": ["interfaces/*"],
+      "@/public/*": ["public/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
