--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "commit-checks": "npm run lint && npm run prettier:fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.12",
+    "@apollo/datasource-rest": "^5.0.2",
+    "@apollo/server": "^4.6.0",
+    "@as-integrations/next": "^1.3.0",
+    "@graphql-tools/mock": "^8.7.20",
+    "@graphql-tools/schema": "^9.0.18",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.1",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
